--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link href="../dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../thomson.css" rel="stylesheet">
+    <link href="thomson.css" rel="stylesheet">
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js"></script>
