--- a/src/simulation.html
+++ b/src/simulation.html
@@ -11,7 +11,7 @@
     <link href="../dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../thomson.css" rel="stylesheet">
+    <link href="thomson.css" rel="stylesheet">
 
     <link href="../assets/css/asciinema-player.css" rel="stylesheet">
 
