--- a/src/simulation.html
+++ b/src/simulation.html
@@ -16,7 +16,7 @@
     <link href="../assets/css/asciinema-player.css" rel="stylesheet">
 
     <title>Ηλεκτρόνια σε μια σφαίρα</title>
-    <link rel="stylesheet" href="../electrons.css">
+    <link rel="stylesheet" href="electrons.css">
     <script src="../dist/electrons.js"></script>
 </script>
 </head>
