--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <title>Ηλεκτρόνια σε μια σφαίρα</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../dist/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="thomson.css" rel="stylesheet">
@@ -51,7 +51,7 @@
                         και όπου απαιτήθηκε χρησιμοποιήθηκαν οι βασικές μέθοδοι που προσφέρει το <a target="_blank" rel="noopener noreferrer" href="https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D">Canvas Rendering Context2D</a>   στα διαθέσιμα Contracts <em>(aka Interfaces)</em>. 
                         Συνοπτικά στο Canvas API προσφέροντε οι βασικές μέθοδοι όπως πχ για να κάνεις draw μια γραμμή, αλλά όχι για το πώς θα κινηθεί αυτή η γραμμή ή να τη κάνει καποιος projected στο Layer μιας Cameras.</br> 
                         Μερικά παραδείγματα αυτών των contracts : </br></br>
-                        <img src="../assets/images/TypescriptInterfaceExample.png" alt="TypescriptInterfaceExample" title="TypescriptInterfaceExample" class="img-responsive fit-image"></br></br>
+                        <img src="assets/images/TypescriptInterfaceExample.png" alt="TypescriptInterfaceExample" title="TypescriptInterfaceExample" class="img-responsive fit-image"></br></br>
                         Θα μπορούσε φυσικά κανείς να  επιλέξει <em>"πατήσει"</em> πάνω σε μια  <strong>third party</strong> βιβλιοθήκη όπως η <strong>Three.js</strong>, αρκεί να είχε όρεξη να μελετήσει σε βάθος μια αρκετά μεγάλη τεχνική τεκμηρίωση <em>(<strong>Documentation</strong>)</em> της βιβλιοθήκης αυτής.</br>
                         Ηταν πιο <strong>ενδιαφέρων</strong> & διδακτικό να υλοποιηθεί από την αρχή το Render <em>(ενός 3D object σε 2D)</em> και ότι συμπεριλαμβάνει/απαιτεί από πλευράς Vector Analysis.</br>
                         Η υλοποίηση της προσομοίωσης έγινε με Προοπτική Προβολή <em>(<strong>Perspective Projection</strong>)</em>, 
@@ -219,7 +219,7 @@
                     </p>
                     <p>
                         <div class="row">
-                            <div class="col-sm-10"><img src="../assets/images/historicModels.jpg" alt="models_history" title="models_history" class="img-responsive fit-image"> </div>
+                            <div class="col-sm-10"><img src="assets/images/historicModels.jpg" alt="models_history" title="models_history" class="img-responsive fit-image"> </div>
                         </div>    
                     </p>
                 </div>
@@ -229,18 +229,18 @@
                 <div class="sidebar-module sidebar-module-inset">
                     <div class="row">
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-10"><img src="../assets/images/Thomsons-Atomic-model-2.png" alt="thomson" title="thomson" class="img-responsive fit-image"></div>
+                        <div class="col-sm-10"><img src="assets/images/Thomsons-Atomic-model-2.png" alt="thomson" title="thomson" class="img-responsive fit-image"></div>
                         <div class="col-sm-1"></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-10"><img src="../assets/images/Thomsons-Atomic-model-1.png" alt="thomson_alt" title="thomson_alt" class="img-responsive fit-image"></div>
+                        <div class="col-sm-10"><img src="assets/images/Thomsons-Atomic-model-1.png" alt="thomson_alt" title="thomson_alt" class="img-responsive fit-image"></div>
                         <div class="col-sm-1"></div>
                     </div>
                     <p><em>Σύμφωνα με το μοντέλο του Thomson (1897), τα  αρνητικά φορτισμένα ηλεκτρόνια είναι εμβαπτισμένα σε μια σφαίρα θετικού φορτίου, όπως φαίνεται στην εικόνα:</em></p>
                 </div>
                 <div class="sidebar-module sidebar-module-inset">
-                    <img src="../assets/images/thomsonsolutions.png" alt="thomsonsolutions" title="thomsonsolutions" class="img-responsive fit-image">
+                    <img src="assets/images/thomsonsolutions.png" alt="thomsonsolutions" title="thomsonsolutions" class="img-responsive fit-image">
                     <p><em>Οι λύσεις του μοντέλου για αριθμό σωματιδίων 2 εώς 5 (<strong>Η προσομοίωση ακολουθεί αυτό το σχέδιο</strong>)</em></p>
                 </div>
             </div>
