--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                     <hr>
                     <blockquote>
                     <p>
-                        Παρουσίαση ενός project ανοιχτού κώδικα.</br> Μπορείτε να βρέιτε το κώδικα σε αυτό το <em><strong>github repository</strong> </em> <a target="_blank" rel="noopener noreferrer" href="https://github.com/galousis/particles">Thomson simulation project</a>.
+                        Παρουσίαση ενός project ανοιχτού κώδικα.</br> Μπορείτε να βρέιτε το κώδικα σε αυτό το <em><strong>github repository</strong> </em> <a target="_blank" rel="noopener noreferrer" href="https://github.com/galousis/particles/tree/master">Thomson simulation project</a>.
                     </p>
                     <p>    
                         Για την υλοποίηση επιλέχθηκε η Typescript ES6 ο κώδικας της οποίας γίνεται complile σε native Javascript.
