--- a/src/simulation.html
+++ b/src/simulation.html
@@ -17,7 +17,7 @@
 
     <title>Ηλεκτρόνια σε μια σφαίρα</title>
     <link rel="stylesheet" href="electrons.css">
-    <script src="dist/electrons.js"></script>
+    <script src="assets/js/electrons.js"></script>
 </script>
 </head>
 <body>
